
install(FILES 
        ${PROJECT_SOURCE_DIR}/_public/public.h
        ${PROJECT_SOURCE_DIR}/_public/gx.h
        ${PROJECT_SOURCE_DIR}/_public/mapping.h
        ${PROJECT_SOURCE_DIR}/_public/number.h
        ${PROJECT_SOURCE_DIR}/_public/str.h
        ${PROJECT_SOURCE_DIR}/_public/path.h
        ${PROJECT_SOURCE_DIR}/_public/sleep.h
        DESTINATION /reckless/RCF/include/RCF)







